<resources>
    <string name="app_name">ZxingLib</string>
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">Align the qr code into\n the frame and scan it\n immediately</string>
    <string name="light">Light</string>
    <string name="album">Album</string>
    <string name="cancel">cancel</string>
    <string name="msg_camera_framework_bug">Please allow UWallet to access your phone\'s camera in your phone\'s settings-app permissions-camera.</string>
    <string name="button_ok">confirm</string>
</resources>
