<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/capture_frame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <SurfaceView
        android:id="@+id/capture_preview_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center" />

    <com.google.zxing.view.ViewfinderView
        android:id="@+id/capture_viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:id="@+id/nav_bar"
            android:layout_below="@id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@color/capture_text_cover_bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/back_rl"
                android:gravity="center_vertical"
                android:layout_width="42dp"
                android:layout_height="42dp">

                <ImageView
                    android:id="@+id/back_img"
                    android:layout_width="8dp"
                    android:layout_height="14dp"
                    android:layout_marginLeft="15dp"
                    android:clickable="true"
                    android:src="@drawable/back_arrow"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/capture_top_hint"
            android:layout_below="@id/nav_bar"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="363dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/top_hint"
            android:textColor="#ffffffff"
            android:textSize="14.0sp" />

        <LinearLayout
            android:layout_below="@id/capture_top_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/capture_text_cover_bg"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/capture_flashlight"
                    android:layout_width="49dip"
                    android:layout_height="57dip"
                    android:layout_gravity="end"
                    android:layout_marginRight="30dp"
                    android:clickable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/scan_flashlight" />

                <TextView
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:text="@string/light"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/capture_scan_photo"
                    android:layout_width="49dip"
                    android:layout_height="57dip"
                    android:layout_marginLeft="30dp"
                    android:clickable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/scan_photo" />

                <TextView
                    android:layout_width="49dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:gravity="center"
                    android:text="@string/album"
                    android:textColor="#FFFFFF"
                    android:textSize="11sp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>